[tool.poetry]
name = "smart-cart-api-server"
version = "0.0.0"
description = "Provides an interfacing point for SmartCart integration with RMF."
authors = ["Arjo Chakravarty <arjoc@intrinsic.ai>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.4,<3.11.0"
fastapi = ">=0.109.0,<0.110.0"
uvicorn = {extras = ["standard"], version = ">=0.28.0,<0.29.0"}
api_server = {git = "https://github.com/open-rmf/rmf-web.git", subdirectory="packages/api-server"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
