[tool.poetry]
name = "smart-cart-api-server"
version = "0.0.0"
description = "Provides an interfacing point for SmartCart integration with RMF."
authors = ["Arjo Chakravarty <arjoc@intrinsic.ai>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.4,<3.11.0"
fastapi = "*"
uvicorn = {extras = ["standard"], version = ">=0.18.2"}
api_server = {git = "https://github.com/open-rmf/rmf-web.git", subdirectory="packages/api-server", branch="hammer/generic-alerts"}
python-keycloak = "^4.0.0"
aiohttp = "^3.9.5"
parse = "^1.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
smart_cart_api_server = "smart_cart_api_server.__main__:main"
keycloak_test = "smart_cart_api_server.tools.keycloak_test:start"
api_sandbox = "smart_cart_api_server.tools.api_integration_test:start"